Change the styling of the header to combat display issues on mobile & added some projects to the projects section. Adjusted the height of the projects section for mobile.

--- a/src/index.css
+++ b/src/index.css
@@ -273,7 +273,7 @@ h1.title {
   background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('./stars-bg.jpg') center center no-repeat;
   background-size: cover;
   width: 100%;
-  height: 100vh;
+  height: 650px;
 }
 
 .header-content {
@@ -463,11 +463,15 @@ h1.title {
     }
 
     .project img {
+      display: flex;
       border-top-left-radius: 20px;
       border-top-right-radius: 20px;
       border-bottom: 1px solid grey;
-      max-width: 400px;
-      max-height: 300px;
+      width: 100%;
+      height: 62%;
+      vertical-align: middle;
+      margin: 0 auto;
+      
     }
 
     p.description {
@@ -491,6 +495,18 @@ h1.title {
     .project-description span.tech-list {
       display: flex;
       justify-content: center;
+    }
+
+    .project-description span.css {
+      color: white;
+      background-color: royalblue;
+      padding: 0 2px;
+    }
+
+    .project-description span.html {
+      color: white;
+      background-color: chocolate;
+      padding: 0 2px;
     }
 
     .project-description span.javascript {
@@ -521,7 +537,7 @@ h1.title {
   align-items: center;
   margin: 0 auto;
   width: 100vw;
-  height: 850px;
+  height: 950px;
   padding-top: 80px;
 }
     #projects div.hr {
@@ -754,6 +770,10 @@ h1.title span {
 
   .header-content-right {
     width: 380px;
+  }
+
+  #projects {
+    height: 1800px;
   }
 
   .projects-container {
